--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -20,18 +20,18 @@
   preview={brownian-motion.gif}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
-}
+  @software{gjurgjaj_2024_12794839,
+    author       = {Gjurgjaj, Lorenci and
+                    Silvestri, Niccolò and
+                    Hysa, Erjon},
+    title        = {AU OPC Interface},
+    month        = jul,
+    year         = 2024,
+    publisher    = {Zenodo},
+    version      = {opcua},
+    doi          = {10.5281/zenodo.12794839},
+    url          = {https://doi.org/10.5281/zenodo.12794839}
+  }
 
 @article{PhysRev.47.777,
   abbr={PhysRev},
