--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -20,7 +20,7 @@
   preview={brownian-motion.gif}
 }
 
-  @software{gjurgjaj_2024_12794839,
+  @software{gjurgjaj2024OPCUA,
     author       = {Gjurgjaj, Lorenci and
                     Silvestri, Niccolò and
                     Hysa, Erjon},
