--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -21,16 +21,16 @@
 }
 
   @software{gjurgjaj2024OPCUA,
-    author       = {Gjurgjaj, Lorenci and
-                    Silvestri, Niccolò and
-                    Hysa, Erjon},
+    abbr={GitHub},
+    bibtex_show={true},
+    author       = {Gjurgjaj, Lorenci, Silvestri, Niccolò and Hysa, Erjon},
     title        = {AU OPC Interface},
     month        = jul,
     year         = 2024,
-    publisher    = {Zenodo},
+    journal      = {Zenodo},
     version      = {opcua},
-    doi          = {10.5281/zenodo.12794839},
-    url          = {https://doi.org/10.5281/zenodo.12794839}
+    doi={10.5281/zenodo.12799898},
+    url={https://doi.org/10.5281/zenodo.12799898}
   }
 
 @article{PhysRev.47.777,
