--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -23,12 +23,12 @@
   @software{gjurgjaj2024OPCUA,
     abbr={GitHub},
     bibtex_show={true},
-    author       = {Gjurgjaj, Lorenci, Silvestri, Niccolò and Hysa, Erjon},
-    title        = {AU OPC Interface},
-    month        = jul,
-    year         = 2024,
-    journal      = {Zenodo},
-    version      = {opcua},
+    author={Gjurgjaj, Lorenci, Silvestri, Niccolò and Hysa, Erjon},
+    title={AU OPC Interface},
+    month={July},
+    year={2024},
+    journal={Zenodo},
+    version={opcua},
     doi={10.5281/zenodo.12799898},
     url={https://doi.org/10.5281/zenodo.12799898}
   }
