--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -20,7 +20,7 @@
   preview={brownian-motion.gif}
 }
 
-@software{gjurgjaj2024OPCUA,
+@article{gjurgjaj2024OPCUA,
   bibtex_show={true},
   author={Gjurgjaj, Lorenci, Silvestri, Niccolò and Hysa, Erjon},
   title={AU OPC Interface},
