--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -20,7 +20,7 @@
   preview={brownian-motion.gif}
 }
 
-@article{gjurgjaj2024OPCUA,
+@article{einstein1950meaning,
   abbr={AJP},
   bibtex_show={true},
   title={The meaning of relativity},
