--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -112,3 +112,12 @@
   preview={wave-mechanics.gif},
   abbr={Vision}
 }
+
+@Article{gjurgjaj2024opcua,
+  bibtex_show={true},
+  abbr={GitHub},
+  title={AU OPC Interface},
+  author={Gjurgjaj, Lorenci, Silvestri, Niccoló and Hysa, Erjon},
+  year={2024},
+  publisher={Zenodo}
+}
