--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -20,7 +20,7 @@
   preview={brownian-motion.gif}
 }
 
-@article{einstein1950meaning,
+@article{gjurgjaj2024opcua,
   abbr={AJP},
   bibtex_show={true},
   title={The meaning of relativity},
@@ -111,11 +111,4 @@
   publisher={Vision},
   preview={wave-mechanics.gif},
   abbr={Vision}
-}
-
-@Article{gjurgjaj2024opcua,
-  title={AU OPC Interface},
-  author={Gjurgjaj, Lorenci, Silvestri, Niccoló and Hysa, Erjon},
-  year={2024},
-  publisher={Zenodo}
 }
