--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -23,8 +23,8 @@
 @article{gjurgjaj2024opcua,
   abbr={AJP},
   bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
+  title={UA OPC Python Interface},
+  author={Gjurgjaj, Lorenci and Silvestri, Niccolò},
   journal={American Journal of Physics},
   volume={18},
   number={6},
