--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -20,11 +20,11 @@
   preview={brownian-motion.gif}
 }
 
-@article{gjurgjaj2024opcua,
+@article{einstein1950meaning,
   abbr={AJP},
   bibtex_show={true},
-  title={UA OPC Python Interface},
-  author={Gjurgjaj, Lorenci and Silvestri, Niccolò},
+  title={The meaning of relativity},
+  author={Einstein, Albert and Taub, AH},
   journal={American Journal of Physics},
   volume={18},
   number={6},
