--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,11 +4,10 @@
 @string{aps = {American Physical Society,}}
 
 @book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
+  title={AU OPC Interface},
+  author={Gjurgjaj, Albert},
   year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+  publisher={Methuen & Co Ltd}
 }
 
 @book{einstein1956investigations,
