--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,9 +5,10 @@
 
 @book{einstein1920relativity,
   title={AU OPC Interface},
-  author={Gjurgjaj, Albert},
+  author={Einstein, Albert},
   year={1920},
-  publisher={Methuen & Co Ltd}
+  publisher={Methuen & Co Ltd},
+  html={relativity.html}
 }
 
 @book{einstein1956investigations,
