--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,12 +3,12 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1920relativity,
-  title={Relativity: the Special and General},
-  author={Einstein, Albert},
-  year={1969},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@article{einstein1920relativity,
+  title={AU OPC Interface},
+  author={Gjurgjaj, Lorenci, Silvestri, Niccolò and Hysa, Erjon},
+  year={2024},
+  journal={Zenodo},
+  doi={10.5281/zenodo.12799898}
 }
 
 @book{einstein1956investigations,
