--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,9 +3,9 @@
 
 @string{aps = {American Physical Society,}}
 
-@article{einstein1920relativity,
+@article{gjurgjaj2024opcua,
   title={AU OPC Interface},
-  author={Gjurgjaj, Lorenci, Silvestri, Niccolò and Hysa, Erjon},
+  author={Gjurgjaj, Lorenci},
   year={2024},
   journal={Zenodo},
   doi={10.5281/zenodo.12799898}
