--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,7 +5,7 @@
 
 @article{gjurgjaj2024opcua,
   title={AU OPC Interface},
-  author={Gjurgjaj, Lorenci},
+  author={Gjurgjaj, Lorenci and Silvestri, Niccolò, and Hysa, Erjon},
   year={2024},
   journal={Zenodo},
   doi={10.5281/zenodo.12799898}
