--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,6 +11,14 @@
   doi={10.5281/zenodo.12799898}
 }
 
+@article{gjurgjaj2024NanoDB,
+  title={NanoDB: Research Activity Data Management System},
+  author={Gjurgjaj, Lorenci, and Silvestri, Niccolò, and Hysa, Erjon, and Pellegrino, Teresa},
+  year={2024},
+  journal={Zenodo},
+  doi={10.5281/zenodo.12799898}
+}
+
 @book{einstein1956investigations,
   bibtex_show={true},
   title={Investigations on the Theory of the Brownian Movement},
