--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,20 +3,24 @@
 
 @string{aps = {American Physical Society,}}
 
-@article{gjurgjaj2024opcua,
+@software{gjurgjaj2024opcua,
+  bibtex_show={true},
   title={AU OPC Interface},
-  author={Gjurgjaj, Lorenci, and Silvestri, Niccolò, and Hysa, Erjon, and Pellegrino, Teresa},
+  author={L. Gjurgjaj, N. Silvestri, E. Hysa, T. Pellegrino},
   year={2024},
+  doi={10.5281/zenodo.12799898},
   journal={Zenodo},
-  doi={10.5281/zenodo.12799898}
+  publisher={Zenodo}
 }
 
-@article{gjurgjaj2024NanoDB,
+@software{gjurgjaj2024NanoDB,
+  bibtex_show={true},
   title={NanoDB: Research Activity Data Management System},
-  author={Gjurgjaj, Lorenci, and Silvestri, Niccolò, and Hysa, Erjon, and Pellegrino, Teresa},
+  author={L. Gjurgjaj, N. Silvestri, E. Hysa, T. Pellegrino},
   year={2024},
-  journal={Zenodo},
   doi={10.5281/zenodo.12799898}
+  journal={Zenodo},
+  publisher={Zenodo}
 }
 
 @article{small2024,
@@ -24,6 +28,7 @@
   title={Nanoplatforms for Magnetic-Photo-Heating of Thermo-Resistant Tumor Cells: Singular Synergic Therapeutic Effects at Mild Temperature},
   author={Mai, B. T., Fernandez-Cabada, T., Conteh, J. S., Nucci, E. P., Fiorito, S., Gavilán, H., Debellis, D., Gjurgjaj, L., & Pellegrino, T.},
   year={2024},
+  doi={10.1002/smll.202310522},
   journal={Small},
   publisher={Wiley}
 }
@@ -33,6 +38,7 @@
   title={Changes in surface and structure of montmorillonite by acid activation},
   author={A. Mele, L. Gjurgjaj, J. Lica, A. Mema, A. Mele, I. Çaçani, J. Keri},
   year={2023},
+  doi={10.1016/j.dental.2023.08.068},
   journal={Dental Materials},
   publisher={Elsevier B.V.}
 }
