--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,7 @@
 ---
 ---
 
-@software{gjurgjaj2024opcua,
+@article{gjurgjaj2024opcua,
   bibtex_show={true},
   title={AU OPC Interface},
   author={L. Gjurgjaj, N. Silvestri, E. Hysa, T. Pellegrino},
@@ -11,7 +11,7 @@
   publisher={Zenodo}
 }
 
-@software{gjurgjaj2024NanoDB,
+@article{gjurgjaj2024NanoDB,
   bibtex_show={true},
   title={NanoDB: Research Activity Data Management System},
   author={L. Gjurgjaj, N. Silvestri, E. Hysa, T. Pellegrino},
