--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,8 @@
 ---
 ---
 
+@string{aps = {American Physical Society,}}
+
 @article{gjurgjaj2024opcua,
   bibtex_show={true},
   title={AU OPC Interface},
