--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,23 +4,19 @@
 @string{aps = {American Physical Society,}}
 
 @article{gjurgjaj2024opcua,
-  bibtex_show={true},
   title={AU OPC Interface},
-  author={L. Gjurgjaj, N. Silvestri, E. Hysa, T. Pellegrino},
+  author={Gjurgjaj, Lorenci, and Silvestri, Niccolò, and Hysa, Erjon, and Pellegrino, Teresa},
   year={2024},
-  doi={10.5281/zenodo.12799898},
   journal={Zenodo},
-  publisher={Zenodo}
+  doi={10.5281/zenodo.12799898}
 }
 
 @article{gjurgjaj2024NanoDB,
-  bibtex_show={true},
   title={NanoDB: Research Activity Data Management System},
-  author={L. Gjurgjaj, N. Silvestri, E. Hysa, T. Pellegrino},
+  author={Gjurgjaj, Lorenci, and Silvestri, Niccolò, and Hysa, Erjon, and Pellegrino, Teresa},
   year={2024},
-  doi={10.5281/zenodo.12799898}
   journal={Zenodo},
-  publisher={Zenodo}
+  doi={10.5281/zenodo.12799898}
 }
 
 @article{small2024,
