--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -26,7 +26,7 @@
 @article{small2024,
   bibtex_show={true},
   title={Nanoplatforms for Magnetic-Photo-Heating of Thermo-Resistant Tumor Cells: Singular Synergic Therapeutic Effects at Mild Temperature},
-  author={Mai, B. T., Fernandez-Cabada, T., Conteh, J. S., Nucci, E. P., Fiorito, S., Gavilán, H., Debellis, D., Gjurgjaj, L., & Pellegrino, T.},
+  author={T. Mai, T. Fernandez-Cabada, J. S. Conteh, E. P. Nucci, S. Fiorito,H. Gavilán, D. Debellis, L. Gjurgjaj, T. Pellegrino},
   year={2024},
   doi={10.1002/smll.202310522},
   journal={Small},
