--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,25 +3,52 @@
 
 @article{gjurgjaj2024opcua,
   title={AU OPC Interface},
-  author={Gjurgjaj, Lorenci, and Silvestri, Niccolò, and Hysa, Erjon, and Pellegrino, Teresa},
+  author={L. Gjurgjaj, N. Silvestri, E. Hysa, T. Pellegrino},
   abstract={This platform provides a versatile and user-friendly interface for controlling laboratory pumps via OPC UA protocol. Pumps are a critical component in fluidic systems, especially in laboratory-scale applications where precise control of fluid flow is essential. This application is specifically tailored for such applications, allowing users to automate and monitor the operation of pumps with ease and accuracy. The user can create and execute a sequence of actions for the pumps in a defined order.},
   year={2024},
   journal={Zenodo},
   doi={10.5281/zenodo.12799898}
 }
 
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
+@article{gjurgjaj2024NanoDB,
+  title={NanoDB: Research Activity Data Management System},
+  author={L. Gjurgjaj, N. Silvestri, E. Hysa, T. Pellegrino},
+  year={2024},
+  doi={10.5281/zenodo.12799898}
+  journal={Zenodo},
+  publisher={Zenodo}
+}
+
+@article{small2024,
+  title={Nanoplatforms for Magnetic-Photo-Heating of Thermo-Resistant Tumor Cells: Singular Synergic Therapeutic Effects at Mild Temperature},
+  author={Mai, B. T., Fernandez-Cabada, T., Conteh, J. S., Nucci, E. P., Fiorito, S., Gavilán, H., Debellis, D., Gjurgjaj, L., & Pellegrino, T.},
+  year={2024},
+  doi={10.1002/smll.202310522},
+  journal={Small},
+  publisher={Wiley}
+}
+
+@article{DentalMaterials2023-2,
+  title={Changes in surface and structure of montmorillonite by acid activation},
+  author={A. Mele, L. Gjurgjaj, J. Lica, A. Mema, A. Mele, I. Çaçani, J. Keri},
+  year={2023},
+  doi={10.1016/j.dental.2023.08.068},
+  journal={Dental Materials},
+  publisher={Elsevier B.V.}
+}
+
+@article{ActaCrystallographica2021,
+  title={Polystyrene modification by cellulose derivative and organoclay},
+  author={L. Gjurgjaj, E. Nushi, A. Mele, A. Mele, D. Mele, I. Qoshja},
+  year={2021},
+  journal={Acta Crystallographica Section A: Foundations and Advances},
+  publisher={Elsevier B.V.}
+}
+
+@article{ActaCrystallographica2021-1,
+  title={Refractory materials structural and surface changes by sulfuric acid treatment},
+  author={E. Nushi, L. Gjurgjaj, A. Mele},
+  year={2021},
+  journal={Acta Crystallographica Section A: Foundations and Advances},
+  publisher={Elsevier B.V.}
 }
