--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -17,3 +17,40 @@
     doi = {10.5281/zenodo.13912817}
 }
 
+@article{small2024,
+    title = {Nanoplatforms for Magnetic-Photo-Heating of Thermo-Resistant Tumor Cells: Singular Synergic Therapeutic Effects at Mild Temperature},
+    author = {Mai, B. T. and Fernandez-Cabada, T. and Conteh, J. S. and Nucci, E. P. and Fiorito, S. and Gavil{\'a}n, H. and Debellis, D. and Gjurgjaj, L. and Pellegrino, T.},
+    abstract = {A self-assemble amphiphilic diblock copolymer that can incorporate iron oxide nanocubes (IONCs) in chain-like assemblies as heat mediators for magnetic hyperthermia (MHT) and tuneable amounts of IR780 dye as agent for photothermal therapy (PTT) is developed. MHT-heating performance of photobeads in viscous media have the same heat performances in water at magnetic field conditions of clinical use. Thanks to IR780, the photobeads are activated by infrared laser light within the first biological window (808 nm) with a significant enhancement of photo-stability of IR780 enabling the raise of the temperature at therapeutic values during multiple PTT cycles and showing unchanged optical features up to 8 days. Moreover, the photobeads fluorescent signal is preserved once internalized by glioblastoma multiforme (GBM) cells. Peculiarly, the photobeads are used as toxic agents to eradicate thermo-resistant GBM cells at mild heat, as low as 41 °C, with MHT and PTT both of clinical use. Indeed, a high U87 GBM cell mortality percentage is obtained only with dual MHT/PTT while each single treatment dose not provide the same cytotoxic effects. Only for the combined treatment, the cell death mechanism is assigned to clear sign of apoptosis as observed by structural/morphological cell studies and enhanced lysosome permeability.},
+    year = {2024},
+    journal = {Small},
+    publisher = {Wiley},
+    doi = {10.1002/smll.202310522}
+}
+
+@article{DentalMaterials20232,
+    title = {Changes in surface and structure of montmorillonite by acid activation},
+    author = {Mele, A. and Gjurgjaj, L. and Lica, J. and Mema, A. and Mele, A. and {\c{C}}a{\c{c}}ani, I. and Keri, J.},
+    abstract = {The sulfuric acid activation of Na-MMT used at a concentration of 28.9\% yields the optimum results for the increase in Ssa and Vp by around 11-fold, compared to the untreated Na-MMT sample. The activated samples are thermally stable and partially crystalline.},
+    year = {2023},
+    journal = {Dental Materials},
+    publisher = {Elsevier B.V.},
+    doi = {10.1016/j.dental.2023.08.068}
+}
+
+@article{ActaCrystallographica2021,
+    title = {Polystyrene modification by cellulose derivative and organoclay},
+    author = {Gjurgjaj, L. and Nushi, E. and Mele, A. and Mele, A. and Mele, D. and Qoshja, I.},
+    abstract = {Compounding of polystyrene (PS) with tetramethylsilyl cellulose (TMSi-Cell) and an organically modified montmorillonite (OMMMT) was carried out in two different ways. In the first way the PS of MW = 49000 and Mn = 32000 was solved in toluene, than mixed with the nanocomposite dispersion of TMSi-Cell/OM-MMT (10.5 \%) in toluene and dried in an oven at 380 mbar/40°C for 20 hours. In the second way the bulk polymerization of PS was tried as a way to obtain PS/TMSi-Cell/OM-MMT nanocomposite. The polymerization followed in a mixture of styrene with TMSi-Cell/OM-MMT (10.5 \%) in an oil bath at 80 °C for 4 hours and at 120 °C for 16 hours. Nanocomposites of TMSi-Cell/OM-MMT were firstly prepared by precipitation from toluene experimenting concentrations from 10.5 \% to 29.35 \% of OM-MMT to TMSi-Cell. The thermal properties of the nanocomposites, were investigated by thermogravimetry and the morphologies of these nanocomposites were evaluated through X-ray diffraction. The 10.50 \% OMMMT/TMSi-Cell nanocomposite showed a completely exfoliated morphology. PS/TMSi-Cell/OM-MMT mixtures were characterized by X-Ray Diffraction, Thermogravimetry and Differential Scanning Calorimetry. Differences in the degradation temperature compared to pure PS show compounding.},
+    year = {2021},
+    journal = {Acta Crystallographica Section A: Foundations and Advances},
+    publisher = {Elsevier B.V.}
+}
+
+@article{ActaCrystallographica20211,
+    title = {Refractory materials structural and surface changes by sulfuric acid treatment},
+    author = {Nushi, E. and Gjurgjaj, L. and Mele, A.},
+    abstract = {Prrenjas clay mineral is used as refractory material in the metal casting and is found in southeast of Albania. It has a high content on bentonite. The influence of the sulphuric acid activation on the composition, structure and surface properties of Prrenjas clay mineral is investigated in this study by means of elemental chemical analysis, X-Ray Diffractometry, IR Spectroscopy and gas adsorption- desorption measurement. H2SO4 concentrations of 0.143 M, 0.232 M, 0.371 M, 0.537 M, 0.734 M, 0.927 M and 1.456 M were used in the treatment of samples. The treatment by increasing the acid concentration brings the leaching of Al3+, Fe2+, Mg2+ from the clay structure. The specific surface area and the pore volume of the clay samples increases respectively from 83 m2/g and 0.069 cm3/g for the untreated clay to 420 m2/g and 0.384 cm3/g for the clay mineral treated with 1.456 M H2SO4 solution. New mesopores were created during the acid activation mainly in the range of 2 -- 8 nm. For the samples treated with 0.927 M and 1.456 M solutions the increase in specific surface area and pore volume is very high. The cationic exchange capacity decreases steadily with the concentration of H2SO4 used for the treatment.},
+    year = {2021},
+    journal = {Acta Crystallographica Section A: Foundations and Advances},
+    publisher = {Elsevier B.V.}
+}
