--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,9 +2,9 @@
     title = {AU OPC Interface},
     author = {Gjurgjaj, L. and Silvestri, N. and Hysa, E. and Pellegrino, T.},
     abstract = {This platform provides a versatile and user-friendly interface for controlling laboratory pumps via OPC UA protocol. Pumps are a critical component in fluidic systems, especially in laboratory-scale applications where precise control of fluid flow is essential. This application is specifically tailored for such applications, allowing users to automate and monitor the operation of pumps with ease and accuracy. The user can create and execute a sequence of actions for the pumps in a defined order.},
+    doi = {10.5281/zenodo.12799898},
     year = {2024},
-    journal = {Zenodo},
-    doi = {10.5281/zenodo.12799898}
+    journal = {Zenodo}    
 }
 
 @article{gjurgjaj2024NanoDB,
@@ -12,9 +12,9 @@
     author = {Gjurgjaj, L. and Silvestri, N. and Hysa, E. and Pellegrino, T.},
     abstract = {NanoDB is a Python-based application developed to optimize the management of experimental data in research settings. Designed with flexibility in mind, it supports the collection, organization, and export of laboratory metadata across diverse research line types. Built on the FAIR principles, by ensuring clean and well-structured datasets, NanoDB also lays the foundation for integrating machine learning, enabling more advanced data analysis and modeling in future research stages.},
     year = {2024},
+    doi = {10.5281/zenodo.13912817},
     journal = {Zenodo},
-    publisher = {Zenodo},
-    doi = {10.5281/zenodo.13912817}
+    publisher = {Zenodo}    
 }
 
 @article{small2024,
@@ -22,9 +22,9 @@
     author = {Mai, B. T. and Fernandez-Cabada, T. and Conteh, J. S. and Nucci, E. P. and Fiorito, S. and Gavil{\'a}n, H. and Debellis, D. and Gjurgjaj, L. and Pellegrino, T.},
     abstract = {A self-assemble amphiphilic diblock copolymer that can incorporate iron oxide nanocubes (IONCs) in chain-like assemblies as heat mediators for magnetic hyperthermia (MHT) and tuneable amounts of IR780 dye as agent for photothermal therapy (PTT) is developed. MHT-heating performance of photobeads in viscous media have the same heat performances in water at magnetic field conditions of clinical use. Thanks to IR780, the photobeads are activated by infrared laser light within the first biological window (808 nm) with a significant enhancement of photo-stability of IR780 enabling the raise of the temperature at therapeutic values during multiple PTT cycles and showing unchanged optical features up to 8 days. Moreover, the photobeads fluorescent signal is preserved once internalized by glioblastoma multiforme (GBM) cells. Peculiarly, the photobeads are used as toxic agents to eradicate thermo-resistant GBM cells at mild heat, as low as 41 °C, with MHT and PTT both of clinical use. Indeed, a high U87 GBM cell mortality percentage is obtained only with dual MHT/PTT while each single treatment dose not provide the same cytotoxic effects. Only for the combined treatment, the cell death mechanism is assigned to clear sign of apoptosis as observed by structural/morphological cell studies and enhanced lysosome permeability.},
     year = {2024},
+    doi={10.1002/smll.202310522},
     journal = {Small},
-    publisher = {Wiley},
-    doi = {10.1002/smll.202310522}
+    publisher = {Wiley}    
 }
 
 @article{DentalMaterials20232,
@@ -32,9 +32,9 @@
     author = {Mele, A. and Gjurgjaj, L. and Lica, J. and Mema, A. and Mele, A. and {\c{C}}a{\c{c}}ani, I. and Keri, J.},
     abstract = {The sulfuric acid activation of Na-MMT used at a concentration of 28.9\% yields the optimum results for the increase in Ssa and Vp by around 11-fold, compared to the untreated Na-MMT sample. The activated samples are thermally stable and partially crystalline.},
     year = {2023},
+    doi={10.1016/j.dental.2023.08.068},
     journal = {Dental Materials},
-    publisher = {Elsevier B.V.},
-    doi = {10.1016/j.dental.2023.08.068}
+    publisher = {Elsevier B.V.}    
 }
 
 @article{ActaCrystallographica2021,
